syntax = "proto3";

service TodoService {
    rpc CreateTodo (Todo) returns (Todo) {}
    rpc GetTodo (TodoRequest) returns (Todo) {}
    rpc ListTodos (Empty) returns (TodoList) {}
}

message Empty {}

message Todo {
    string id = 1;
    string title = 2;
    optional string content = 3;
}

message TodoList {
    repeated Todo todos = 1;
}

message TodoRequest {
    string id = 1;
}
